--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "express_api",
   "version": "1.0.0",
   "description": "RESTful API",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "devStart": "nodemon index.js"
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.4"
+    "mongoose": "^6.7.4",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
