--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express_api",
   "version": "1.0.0",
   "description": "RESTful API",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
     "devStart": "nodemon server.js"
   },
